# hg

./: .gitignore  Cargo.toml  README.md  justfile
benches/: cri_graphemes.rs  cri_json.rs
benches/data/: small.json  text-1kb.json
hg/: Cargo.toml
hg-examples/: Cargo.toml
hg-examples/examples/calc/: analyser.rs  ast.rs  main.rs
hg-examples/examples/calc/analyser/: tests.rs
hg-examples/examples/json/: main.rs
hg-examples/src/: testing.rs
hg/benches/: cri_chars.rs  cri_json.rs
hg/src/: graphemes.rs  lexer.rs  lib.rs  metadata.rs  newline_terminated_bytes.rs  parser.rs  symbols.rs  token.rs  tree.rs  types.rs
hg/src/lexer/: tests.rs
hg/src/parser/: tests.rs
hg/src/symbols/: tests.rs
hg/tests/: json_lex_parse.rs
src/: char_buffer.rs  graphemes.rs  lexer.rs  lib.rs  metadata.rs  newline_terminated.rs  newline_terminated_bytes.rs  newline_terminated_chars.rs  parser.rs  symbols.rs  token.rs  tree.rs
src/lexer/: symbols.rs  tests.rs
src/parser/: fragment_stream.rs  tests.rs
tests/: json_lex_parse.rs
