[package]
name = "hg"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Parser for the Mercury metalanguage"
repository = "https://github.com/obsidiandynamics/hg"

[dependencies]
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "cri_json"
harness = false
