[workspace]
members = [
    "hg",
    "hg-examples"
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Emil Koutanov"]
description = "Parser for the Mercury metalanguage"
repository = "https://github.com/obsidiandynamics/hg"

[workspace.dependencies]
thiserror = "2.0.12"
once_cell = "1.21.3"
criterion = { version = "0.6.0", features = ["html_reports"] }
