[package]
name = "hg"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license .workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
once_cell.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "cri_graphemes"
harness = false

[[bench]]
name = "cri_chars"
harness = false

[[bench]]
name = "cri_json"
harness = false
